[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = "Brain games project on Hexlet"
authors = ["sp082d <43670149+sp082d@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
